--- a/Phase 1 - Stronghold/pom.xml
+++ b/Phase 1 - Stronghold/pom.xml
@@ -39,6 +39,13 @@
       <artifactId>jackson-core</artifactId>
       <version>2.14.2</version>
     </dependency>
+    <!--  https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api  -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.9.2</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 
